; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/blackfin/mach-common/extr_ints-priority.c_bfin_gpio_irq_shutdown.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/blackfin/mach-common/extr_ints-priority.c_bfin_gpio_irq_shutdown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@gpio_enabled = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @bfin_gpio_irq_shutdown to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bfin_gpio_irq_shutdown(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i32 @irq_to_gpio(i32 %4)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @bfin_gpio_mask_irq(i32 %6)
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @gpio_enabled, align 4
  %10 = call i32 @__clear_bit(i32 %8, i32 %9)
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @bfin_gpio_irq_free(i32 %11)
  ret void
}

declare dso_local i32 @irq_to_gpio(i32) #1

declare dso_local i32 @bfin_gpio_mask_irq(i32) #1

declare dso_local i32 @__clear_bit(i32, i32) #1

declare dso_local i32 @bfin_gpio_irq_free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
